# ALU-Agent-Language-Union

./: .al-iter-state.json  .commit0.yaml  .dockerignore  .gitignore  Dockerfile.benchmark  LICENSE  README.md  benchmark.sh  pyproject.toml
al/codegen/: __init__.py  emit_agent.py  emit_code.py  emit_flow.py  emit_python.py  equiv.py
al/llm/: __init__.py  base.py  claude_code.py  env.py  mock.py  openai_compat.py
al/parser/: __init__.py  ast_nodes.py  parser.py  resolver.py  serializer.py  tokenizer.py  validate.py
benchmarks/adapters/: humaneval.py  mbpp.py
benchmarks/agents/: __init__.py  al_greenfield_implementer.py  al_greenfield_prompt.md  al_implementer.py  al_prompt.md  python_implementer.py  python_prompt.md
benchmarks/harness/: V1_SUBSET.py  __init__.py  __main__.py  commit0_adapter.py  inject.py  multibench_runner.py  runner.py  strip_implementation.py
benchmarks/metrics/: __init__.py  pass_at_k.py  roundtrip_loss.py
benchmarks/reports/: al-loop-decisions.md  budget-tracker.json  codex-coiter-log.md  phase-e-equivalence.md  v0.7-pilot-decision.md  v0.8-final-decision.md  v1.0-final.md  v1.1-final.md  v1.2-final.md
benchmarks/skeletons/: _autogen.py  babel.al  cachetools.al  cachetools.notes.md  chardet.al  cookiecutter.al  deprecated.al  deprecated.notes.md  imapclient.al  jinja.al  marshmallow.al  minitorch.al  parsel.al  portalocker.al  portalocker.notes.md  pyjwt.al  simpy.al  tinydb.al  voluptuous.al  voluptuous.notes.md  (+2 more)
docs/: al-spec.md  authoring-al.md  benchmark.md  parser.md  preamble-design.md  set-node.md
examples/: daily_news.al
(+176 files in other folders)
