[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "al"
version = "0.1.0.dev0"
description = "Editor-first language for stripped-Python completion (benchmark-driven design verification)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "agent-lang contributors" }]
keywords = ["agent", "llm", "workflow", "dsl", "commit0", "benchmark"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
webui = ["flask>=3"]
dev = ["pytest>=8.0", "ruff>=0.5", "black>=24.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["al*"]
exclude = ["benchmarks*", "tests*", "docs*", "thirdparty*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
